# LambdaPC-ocaml

./: LICENSE  LambdaPC.opam  README.md  dune-project
lib/: circuit.ml  circuit.mli  dune  examples.ml  examples.mli  examples.pc  fresh.ml  fresh.mli  interface.ml  lambdaC.ml  lambdaC.mli  lambdaPC.ml  lambdaPC.mli  lexer.mll  parser.mly  scalars.ml  scalars.mli  symbol.ml  symbol.mli  synthesis.ml  synthesis.mli  tableau.ml  typing.ml  typing.mli  util.ml
lib/core/: circuit.mli   dune  tableau.ml  typing.ml  typing.mli
lib/interface/: dune  ident.ml  interface.ml  named_ast.ml  resolve.ml  symbol.ml  symbol.mli
lib/lambdaC/: ast.ml  ast.mli  dune  lambdaC.ml  lambdaC.mli
lib/lambdaPC/: lambdaPC.ml  lambdaPC.mli
test/: dune  test_LambdaPC.ml  test_all.ml  test_lambdaC.ml  test_lambdaC.mli  test_lambdaPC.ml  test_scalars.ml  test_scalars.mli
